Tile Sizing problem solved.

--- a/projects.html
+++ b/projects.html
@@ -25,7 +25,8 @@
             <hr>
             <p>            
                 This website contains interesting tools and codes
-                which may
+                which may help you in 
+                
             </p> 
         </div>
         <div class='container1' id="p2">
