--- a/jsindex.html
+++ b/jsindex.html
@@ -18,7 +18,7 @@
     Time for some DOM Manipulation with Javascript!<br>
     
     
-    <script src="JS/indexj.js">
+    <script src="JS/index1.js">
         //For Commenting
         alert('Javascript is running.');
     </script>
