--- a/projects.html
+++ b/projects.html
@@ -20,42 +20,43 @@
     <h1 id="project_heaading">Projects</h1>
     <hr>
     <div class="body">
-        <div class='container1' id="p1">
-            <H3>My Practice Codes</H3>
+        <a href="htmlcss.html"><div class='container1' id="p1">
+            <H3>First HTML CSS</H3>
             <hr>
             <p>            
-                This website contains interesting tools and codes
-                which may help you in 
+                This page consists of some of my
+                very early practice of HTML and CSS.
                 
             </p> 
-        </div>
-        <div class='container1' id="p2">
-            <H3>My Practice Codes</H3>
+        </div></a>
+        <a href="jsindex.html"><div class='container1' id="p2">
+            <H3>First Javascript practice</H3>
             <hr>
             <p>            
-            This website contains interesting tools and codes
-            which may help you in your coding journey.
-            Click on the above tabs to check them out!
+            This page contains my first JavaScript 
+            codes, this page contains code from 
+            Code with Harry!
             </p> 
-        </div>
-        <div class='container1' id="p3">
-            <H3>My Practice Codes</H3>
+        </div></a>
+        <a href="Python1.html"><div class='container1' id="p3">
+            <H3>Beginner Python Codes</H3>
             <hr>  
             <p>          
-            This website contains interesting tools and codes
-            which may help you in your coding journey.
-            Click on the above tabs to check them out!
+            These are collection of some of my 
+            first Python codes. I started learning
+            Python from a youtube channel,
+            Programming with Mosh.
             </p> 
-        </div>
-        <div class='container1' id="#">
-            <H3>My Practice Codes</H3>
+        </div></a>
+        <a href="Projects/PigGame/index.html"><div class='container1' id="#">
+            <H3>Dice Pig Game</H3>
             <hr> 
             <p>           
-            This website contains interesting tools and codes
-            which may help you in your coding journey.
-            Click on the above tabs to check them out!
-            </p> 
-        </div>
+            This is a Dice game which I made using JavaScript,
+            basic HTML and CSS is from a Udemy course by
+            Jonas Schmedtmann. JavaScript is written by me.
+            </p>
+        </div></a>
         <div class='container1' id="#">
             <H3>My Practice Codes</H3>
             <hr> 
@@ -129,6 +130,9 @@
             </p> 
         </div>
     </div>
-    
+    <script src="JS/index.js">
+        //For Commenting
+        //alert('Javascript is running.');
+    </script>
 </body>
 </html>
