--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@
             Code with Harry!
             </p> 
         </div></a>
-        <a href="Python1.html"><div class='container1' id="p3">
+        <a href="Projects/PythonPractice/Python1.html"><div class='container1' id="p3">
             <H3>Beginner Python Codes</H3>
             <hr>  
             <p>          
@@ -57,15 +57,15 @@
             Jonas Schmedtmann. JavaScript is written by me.
             </p>
         </div></a>
-        <div class='container1' id="#">
-            <H3>My Practice Codes</H3>
+        <a href="Projects/TicTacToe/TicTacToe.html"><div class='container1' id="#">
+            <H3>Tic Tac Toe</H3>
             <hr> 
             <p>           
-            This website contains interesting tools and codes
-            which may help you in your coding journey.
-            Click on the above tabs to check them out!
+            This is a two player Tic Tac Toe
+            which is made by Python, then I made it in
+            executable file.
             </p> 
-        </div>
+        </div></a>
         <div class='container1' id="#">
             <H3>My Practice Codes</H3>
             <hr> 
